Added arguments to game over fragment to show total correct annswers. Added string resource for display text on both winner and game over fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="congratulations">Congratulations!</string>
     <string name="share">Share</string>
     <string name="sharing_not_available">Sharing Not Available</string>
+    <string name="winner_text">You answered %1$d/%2$d questions correctly. Bravo!</string>
+    <string name="try_again_text">You only answered %1$d/%2$d answers correctly.</string>
 
 </resources>
